Add function to Access Control Page to add, render and delete permissions
